--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".SignUpActivity"
             android:exported="true" />
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".HotelPageActivity"
             android:exported="true" />
         <activity
             android:name=".ArrayListActivity"
