--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ibrah" >
-
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    package="com.example.ibrah">
 
     <application
         android:allowBackup="true"
@@ -10,15 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.IbraH" >
-        <service
-            android:name=".NotificationIntentService"
-            android:exported="false" >
-        </service>
+        android:theme="@style/Theme.IbraH">
+        <activity
+            android:name=".Reservation"
+            android:exported="true" />
 
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
+
         <activity
             android:name=".ArrayListActivity"
             android:exported="true" />
@@ -36,23 +34,28 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".NotificationReceiver"
+            android:enabled="true"
+            android:exported="false" />
+
+        <service
+            android:name=".NotificationIntentService"
+            android:exported="false"></service>
 
         <service
             android:name=".MusicService"
             android:enabled="true"
             android:exported="true" />
-
-        <receiver
-            android:name=".NotificationReceiver"
-            android:enabled="true"
-            android:exported="false" />
     </application>
+
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 </manifest>
