--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ibrah">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IbraH">
+        <activity
+            android:name=".LEuropeDesc"
+            android:exported="true" />
+        <activity
+            android:name=".MurakaDesc"
+            android:exported="true" />
         <activity
             android:name=".AmanzoeDesc"
             android:exported="true" />
@@ -45,8 +49,6 @@
             </intent-filter>
         </activity>
 
-
-
         <receiver
             android:name=".NotificationReceiver"
             android:enabled="true"
@@ -60,8 +62,9 @@
             android:enabled="true"
             android:exported="true" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
