--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
 }
